javali_tests/A3/A4_keinestamSchmid/fail/Error.2.2.9.INVALID_OVERRIDE.2.javali
// Rule 2.2.9: The types of the parameters and the return type of overridden methods must be the same as for the corresponding method in the superclass.
// wrong parameter type
class Main {
	void main() {
		int i;
	}
}

class superClass {
	int a;
	int b;

	void swap(int a, int b) {
		int i;
		i = a + b;
	}
}

class subClass extends superClass {
	int a;
	int b;

	void swap(float a, int b) {
		int i;
	}
}

